# self_survey

./: .gitignore  README.md  pyproject.toml
src/self_survey/: cli.py  clip_to_radius.py  colorize_from_ortho.py  contour_generation.py  gaussian_splatting.py  merge_lidar_tiles.py  nys_parcel_lookup.py  nys_tile_downloader.py  polygon_clip.py  preprocess.py  register_iphone.py
src/self_survey/commands/: contour.py  download.py  ingest.py  parcel.py  register.py  splat.py
