[project]
name = "self-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.2.5",
    "ezdxf>=1.3.0",
    "laspy[lazrs]>=2.6.1",
    "matplotlib>=3.9.0",
    "numpy>=2.3.5",
    "open3d>=0.19.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "scipy>=1.14.0",
]

[project.scripts]
preprocess = "self_survey.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
