[project]
name = "self-survey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.2.5",
    "ezdxf>=1.3.0",
    "laspy[lazrs]>=2.6.1",
    "matplotlib>=3.9.0",
    "numpy>=2.3.5",
    "open3d>=0.19.0",
    "pillow>=10.0.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
# Optional dependencies for 3D Gaussian Splatting training
splat = [
    "torch>=2.0.0",
    "gsplat>=1.0.0",
    "torchvision>=0.15.0",
]
# Development dependencies
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
preprocess = "self_survey.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
    "ARG001", # unused function argument (common in CLI callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["self_survey"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
